--- a/css/common.less
+++ b/css/common.less
@@ -7,15 +7,16 @@ html {
   max-width: 640px;
   margin: 0 auto;
 }
-html,body {
+
+html, body {
   width: 100%;
 }
 
 //主色调
 @color: #ff841d;
 
-@bg-image1:linear-gradient(#fff,#efefef);
-@bg-image2:linear-gradient(#efefef,#fff);
+@bg-image1: linear-gradient(#fff, #efefef);
+@bg-image2: linear-gradient(#efefef, #fff);
 
 .main-color {
   color: @color;
@@ -50,7 +51,7 @@ html,body {
     /* 搜索 */
     height: 2.525rem;
     background: #fff;
-    padding: .6rem .5rem 0 ;
+    padding: .6rem .5rem 0;
     box-sizing: border-box;
     input {
       width: 14rem;
@@ -68,7 +69,7 @@ html,body {
       background: @color;
       color: #fff;
       border-radius: 30px;
-      border:none;
+      border: none;
       outline: none;
       float: right;
     }
@@ -76,9 +77,9 @@ html,body {
 
   .m-footer {
     text-align: center;
-    ul{
+    ul {
       padding: 1.225rem 0 .8rem;
-      li{
+      li {
         float: left;
         border-top: 1px solid #ccc;
         border-bottom: 1px solid #ccc;
@@ -88,13 +89,13 @@ html,body {
         &:first-child {
           width: 30%;
         }
-        &:nth-child(2){
+        &:nth-child(2) {
           border: 1px solid #ccc;
           width: 30%;
         }
         &:last-child {
           width: 40%;
-          img{
+          img {
             width: .7rem;
             height: .6rem;
             display: inline-block;
@@ -112,11 +113,10 @@ html,body {
 .col-black {
   color: #000;
 }
+
 .col-gold {
   color: #ff8b26;
 }
-
-
 
 //筛选
 
@@ -146,5 +146,99 @@ html,body {
     span {
       margin: 0 3px;
     }
+  }
+}
+
+//翻页
+
+.pageTo {
+  height: 2.325rem;
+  box-sizing: border-box;
+  padding: .5rem 1.05rem 0;
+  position: relative;
+  button {
+    width: 4.075rem;
+    height: 1.625rem;
+    background-image: linear-gradient(#efefef, #d7d7d7);
+    border-radius: 10px;
+    border: 1px solid #ccc;
+  }
+  .btn-center {
+    width: 3.85rem;
+    height: 1.675rem;
+    line-height: 1.675rem;
+    position: absolute;
+    top: .5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: .73rem;
+    span {
+      display: inline-block;
+      width: 100%;
+      height: 1.675rem;
+      padding-left: .8rem;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    ul {
+      display: none;
+      border: 1px solid #ccc;
+      max-height: 1.67*3rem;
+      overflow: auto;
+      position: absolute;
+      top: 1.67rem;
+      left: 0;
+      width: 100%;
+      box-sizing: border-box;
+      li {
+        height: 1.67rem;
+        border-bottom: 1px solid #ccc;
+        line-height: 1.67rem;
+        padding-left: .8rem;
+        background: #f1f1f1;
+        &.now {
+          background: skyblue;
+        }
+      }
+    }
+  }
+  i {
+    margin-top: .57rem;
+    margin-right: .275rem;
+  }
+}
+
+//顶部样式覆盖
+
+.m-top {
+  &.normal-top {
+    //覆盖顶部样式
+    overflow: hidden;
+    .m-logo {
+      margin-top: .1rem;
+      a > i:before {
+        font-size: 2rem;
+        color: #fff;
+      }
+    }
+    p {
+      display: inline-block;
+      width: 15.5rem;
+      text-align: center;
+      color: #fff;
+      font-size: 1rem;
+      font-weight: 700;
+    }
+  }
+}
+
+.m-footer {
+  &.normal-footer {
+    //底部样式覆盖
+    overflow: hidden;
+    ul {
+      padding-top: 0 !important;
+    }
+
   }
 }
