--- a/css/inlanddiscount.css
+++ b/css/inlanddiscount.css
@@ -442,118 +442,51 @@ body {
 .m-footer.normal-footer ul {
   padding-top: 0 !important;
 }
-.m-footer {
-  background: #efefef;
-}
-.m-footer ul {
-  padding-top: 0 !important;
-}
-.m-productlist .img-box {
-  width: 18.55rem;
-  height: 12.6rem;
+.inlanddiscount .in-list ul {
+  padding-bottom: 1.3rem;
   background: #fff;
-  box-sizing: border-box;
-  padding: .93rem;
-  font-size: .85rem;
-  text-align: center;
 }
-.m-productlist .img-box img {
-  width: 13.8rem;
-  height: 9rem;
-  margin: 0 auto;
-}
-.m-productlist .info .nav {
-  height: 1.6rem;
-  border-top: 1px solid #bd3c05;
-  border-bottom: 1px solid #bd3c05;
-}
-.m-productlist .info .nav li {
-  width: 33.333%;
-  background: #ffcc43;
-  color: #fff;
+.inlanddiscount .in-list ul li {
   float: left;
+  overflow: hidden;
+  width: 50%;
+  height: 13rem;
   box-sizing: border-box;
-  height: 100%;
-  line-height: 1.6rem;
-  text-align: center;
-  font-size: .73rem;
-}
-.m-productlist .info .nav li:first-child {
-  background: #ffa42b;
-}
-.m-productlist .info .nav li:nth-child(2) {
-  border-left: 1px solid #bd3c05;
-  border-right: 1px solid #bd3c05;
-}
-.m-productlist .info .goBuy {
-  height: 2.1rem;
-  border-bottom: 1px solid #ccc;
-  line-height: 2.1rem;
-  padding: 0 .35rem;
-  font-size: .77rem;
-}
-.m-productlist .info .goBuy table img {
-  float: left;
-  width: .8rem;
-  height: .8rem;
-  margin-top: .65rem;
-}
-.m-productlist .info .goBuy table .red {
-  color: red;
-  text-align: right;
-  padding-right: .8rem;
-}
-.m-productlist .info .goBuy .right span {
-  color: red;
-}
-.m-productlist .info .goBuy .right a {
-  position: relative;
-  width: 2.725rem;
-  height: 1.25rem;
-  background: red;
-  color: #fff;
-  line-height: 2;
-  padding: .2rem .4rem;
-  border-radius: 10px;
-}
-.m-productlist .info .other {
-  display: block;
-  padding: .5rem 0;
+  padding: .6rem .8rem;
   font-size: .6rem;
-  line-height: 2;
+  border-bottom: 1px solid #f0f0f0;
 }
-.m-productlist .comment .comment-top {
-  height: 1.6rem;
-  text-align: center;
-  background: #bdbdbd;
-  font-size: .725rem;
-  line-height: 1.6rem;
-}
-.m-productlist .comment .comment-info {
-  background: #fff;
-}
-.m-productlist .comment .comment-info li {
-  padding: .75rem .5rem;
-  border-bottom: 1px solid #ccc;
-}
-.m-productlist .comment .comment-info li .comment-info-top {
-  font-size: .675rem;
-}
-.m-productlist .comment .comment-info li .comment-info-top .right {
-  text-align: right;
-}
-.m-productlist .comment .comment-info li .comment-info-comment {
-  font-size: .7rem;
-  margin-top: .55rem;
-}
-.m-productlist .bottom {
-  padding: .775rem .45rem;
-}
-.m-productlist .bottom button {
+.inlanddiscount .in-list ul li img {
+  width: 7.2rem;
+  height: 7.2rem;
   display: block;
-  width: 18rem;
-  height: 1.62rem;
-  background-image: linear-gradient(#eee, #cacaca);
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  margin: 0 auto .6rem;
+}
+.inlanddiscount .in-list ul li .info {
+  color: #000;
+  font-weight: 700;
+  font-size: .6rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.inlanddiscount .in-list ul li .price {
+  color: #ff6c08;
+  display: block;
+  margin: .2rem 0;
+  font-size: .6rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.inlanddiscount .in-list ul li .time {
+  font-size: .5rem;
+  color: #ccc;
+}
+.inlanddiscount .in-list ul li:nth-child(odd) {
+  border-right: 1px solid #f0f0f0;
 }
