--- a/css/moneyctrl.css
+++ b/css/moneyctrl.css
@@ -442,118 +442,52 @@ body {
 .m-footer.normal-footer ul {
   padding-top: 0 !important;
 }
-.m-footer {
-  background: #efefef;
+.container .m-top {
+  overflow: hidden;
 }
-.m-footer ul {
-  padding-top: 0 !important;
+.container .m-top .m-logo {
+  margin-top: .1rem;
 }
-.m-productlist .img-box {
-  width: 18.55rem;
-  height: 12.6rem;
-  background: #fff;
-  box-sizing: border-box;
-  padding: .93rem;
-  font-size: .85rem;
-  text-align: center;
-}
-.m-productlist .img-box img {
-  width: 13.8rem;
-  height: 9rem;
-  margin: 0 auto;
-}
-.m-productlist .info .nav {
-  height: 1.6rem;
-  border-top: 1px solid #bd3c05;
-  border-bottom: 1px solid #bd3c05;
-}
-.m-productlist .info .nav li {
-  width: 33.333%;
-  background: #ffcc43;
+.container .m-top .m-logo a > i:before {
+  font-size: 2rem;
   color: #fff;
-  float: left;
-  box-sizing: border-box;
-  height: 100%;
-  line-height: 1.6rem;
+}
+.container .m-top p {
+  display: inline-block;
+  width: 15.5rem;
   text-align: center;
-  font-size: .73rem;
-}
-.m-productlist .info .nav li:first-child {
-  background: #ffa42b;
-}
-.m-productlist .info .nav li:nth-child(2) {
-  border-left: 1px solid #bd3c05;
-  border-right: 1px solid #bd3c05;
-}
-.m-productlist .info .goBuy {
-  height: 2.1rem;
-  border-bottom: 1px solid #ccc;
-  line-height: 2.1rem;
-  padding: 0 .35rem;
-  font-size: .77rem;
-}
-.m-productlist .info .goBuy table img {
-  float: left;
-  width: .8rem;
-  height: .8rem;
-  margin-top: .65rem;
-}
-.m-productlist .info .goBuy table .red {
-  color: red;
-  text-align: right;
-  padding-right: .8rem;
-}
-.m-productlist .info .goBuy .right span {
-  color: red;
-}
-.m-productlist .info .goBuy .right a {
-  position: relative;
-  width: 2.725rem;
-  height: 1.25rem;
-  background: red;
   color: #fff;
-  line-height: 2;
-  padding: .2rem .4rem;
-  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 700;
 }
-.m-productlist .info .other {
-  display: block;
-  padding: .5rem 0;
-  font-size: .6rem;
-  line-height: 2;
-}
-.m-productlist .comment .comment-top {
-  height: 1.6rem;
-  text-align: center;
-  background: #bdbdbd;
-  font-size: .725rem;
-  line-height: 1.6rem;
-}
-.m-productlist .comment .comment-info {
+.moneyctrl {
   background: #fff;
 }
-.m-productlist .comment .comment-info li {
-  padding: .75rem .5rem;
-  border-bottom: 1px solid #ccc;
-}
-.m-productlist .comment .comment-info li .comment-info-top {
-  font-size: .675rem;
-}
-.m-productlist .comment .comment-info li .comment-info-top .right {
-  text-align: right;
-}
-.m-productlist .comment .comment-info li .comment-info-comment {
+.moneyctrl .list li {
+  height: 6.35rem;
+  border-bottom: 1px solid #e7e7e7;
+  box-sizing: border-box;
+  padding: .7rem .4rem;
   font-size: .7rem;
-  margin-top: .55rem;
 }
-.m-productlist .bottom {
-  padding: .775rem .45rem;
+.moneyctrl .list li img {
+  width: 5rem;
+  height: 5rem;
+  float: left;
 }
-.m-productlist .bottom button {
-  display: block;
-  width: 18rem;
-  height: 1.62rem;
-  background-image: linear-gradient(#eee, #cacaca);
-  border: 1px solid #ccc;
-  border-radius: 5px;
+.moneyctrl .list li .info {
+  overflow: hidden;
+  padding-left: .6rem;
+  box-sizing: border-box;
+}
+.moneyctrl .list li .info .title {
+  height: 3.275rem;
+  font-size: .67rem;
+}
+.moneyctrl .list li .info .shop {
+  font-size: .57rem;
+  color: #ccc;
+}
+.moneyctrl .list li .info .shop span {
+  float: right;
 }
