--- a/css/productlistwen.css
+++ b/css/productlistwen.css
@@ -274,7 +274,7 @@ body {
   /* 搜索 */
   height: 2.525rem;
   background: #fff;
-  padding: .6rem .5rem 0 ;
+  padding: .6rem .5rem 0;
   box-sizing: border-box;
 }
 .container .m-search input {
@@ -361,6 +361,86 @@ body {
 }
 .m-productlist .top span {
   margin: 0 3px;
+}
+.pageTo {
+  height: 2.325rem;
+  box-sizing: border-box;
+  padding: .5rem 1.05rem 0;
+  position: relative;
+}
+.pageTo button {
+  width: 4.075rem;
+  height: 1.625rem;
+  background-image: linear-gradient(#efefef, #d7d7d7);
+  border-radius: 10px;
+  border: 1px solid #ccc;
+}
+.pageTo .btn-center {
+  width: 3.85rem;
+  height: 1.675rem;
+  line-height: 1.675rem;
+  position: absolute;
+  top: .5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: .73rem;
+}
+.pageTo .btn-center span {
+  display: inline-block;
+  width: 100%;
+  height: 1.675rem;
+  padding-left: .8rem;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+.pageTo .btn-center ul {
+  display: none;
+  border: 1px solid #ccc;
+  max-height: 5.01rem;
+  overflow: auto;
+  position: absolute;
+  top: 1.67rem;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+.pageTo .btn-center ul li {
+  height: 1.67rem;
+  border-bottom: 1px solid #ccc;
+  line-height: 1.67rem;
+  padding-left: .8rem;
+  background: #f1f1f1;
+}
+.pageTo .btn-center ul li.now {
+  background: skyblue;
+}
+.pageTo i {
+  margin-top: .57rem;
+  margin-right: .275rem;
+}
+.m-top.normal-top {
+  overflow: hidden;
+}
+.m-top.normal-top .m-logo {
+  margin-top: .1rem;
+}
+.m-top.normal-top .m-logo a > i:before {
+  font-size: 2rem;
+  color: #fff;
+}
+.m-top.normal-top p {
+  display: inline-block;
+  width: 15.5rem;
+  text-align: center;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.m-footer.normal-footer {
+  overflow: hidden;
+}
+.m-footer.normal-footer ul {
+  padding-top: 0 !important;
 }
 .m-productlist {
   background: #fff;
