大致完成，最后一页细节，以及其他待细微修改

--- a/css/baicaijia.less
+++ b/css/baicaijia.less
@@ -13,6 +13,7 @@
     height: 2rem;
     background: #fff;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     ul {
       width: 1000%;
       margin-right: 2rem;
@@ -35,7 +36,7 @@
     .right {
       width: 2rem;
       height: 2rem;
-      background: gold;
+      background: #f6f6f6;
       position: absolute;
       top: 0;
       right: 0;
