--- a/css/brandTitle.css
+++ b/css/brandTitle.css
@@ -442,113 +442,69 @@ body {
 .m-footer.normal-footer ul {
   padding-top: 0 !important;
 }
-.container .m-top {
-  background: #f4483e;
+.container .m-footer ul {
+  padding-top: 0;
 }
-.baicaijia {
-  overflow: hidden;
-  position: relative;
-}
-.baicaijia .bcj-top {
-  height: 2rem;
+.brandtitle {
   background: #fff;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
+  padding-bottom: 1rem;
 }
-.baicaijia .bcj-top ul {
-  width: 1000%;
-  margin-right: 2rem;
-  height: 100%;
-}
-.baicaijia .bcj-top ul li {
-  height: 100%;
-  line-height: 2rem;
-  margin: 0 .6rem;
-  float: left;
-  font-size: .6rem;
+.brandtitle .top {
+  height: 1.8rem;
+  background-image: linear-gradient(#fff, #efefef);
+  line-height: 1.8rem;
+  border-top: 1px solid #efefef;
+  border-bottom: 1px solid #ccc;
+  font-size: .75rem;
   box-sizing: border-box;
+  padding: 0 .475rem;
 }
-.baicaijia .bcj-top ul li.now {
-  color: red;
-  border-bottom: 3px solid red;
+.brandtitle .top .filtrate {
+  width: 3.1rem;
+  height: 1.475rem;
+  border-radius: 10px;
+  background-image: linear-gradient(#efefef, #fff);
+  border: 1px solid #ccc;
+  margin-top: .125rem;
 }
-.baicaijia .bcj-top .right {
-  width: 2rem;
-  height: 2rem;
-  background: #f6f6f6;
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 1.2rem;
+.brandtitle .top a {
+  font-size: .75rem;
 }
-.baicaijia .bcj-top .right:before {
-  position: relative;
-  top: .4rem;
-  left: .4rem;
-  color: #ccc;
+.brandtitle .top span {
+  margin: 0 3px;
 }
-.baicaijia .bcj-content ul li {
-  padding: .5rem .3rem;
-  margin-top: .2rem;
-  background: #fff;
+.brandtitle .brandtitle-center {
+  background: #f1f1f1;
+  margin: .5rem .3rem;
+  padding: .6rem;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  font-size: .9rem;
+  color: #814347;
 }
-.baicaijia .bcj-content ul li img {
-  width: 6.4rem;
-  height: 6.4rem;
-  float: left;
-}
-.baicaijia .bcj-content ul li .bcj-info {
-  margin-left: 7rem;
-  font-size: .7rem;
-}
-.baicaijia .bcj-content ul li .bcj-info .price {
-  color: red;
-  display: inline-block;
-  padding: .3rem 0;
-}
-.baicaijia .bcj-content ul li .bcj-info .price em {
-  font-size: .4rem;
-}
-.baicaijia .bcj-content ul li .bcj-info .price del {
-  font-size: .4rem;
-  color: #ccc;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar {
-  color: #fb3461;
-  height: 1.5rem;
-  padding: .3rem 0;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar i {
-  display: inline-block;
-  width: 4.3rem;
-  height: .8rem;
-  background: #ffb7b7;
-  border-radius: 15px;
+.brandtitle ul {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background: #f3f3f3;
   overflow: hidden;
 }
-.baicaijia .bcj-content ul li .bcj-info .bar i em {
+.brandtitle ul li {
+  width: 100%;
+  box-sizing: border-box;
+  padding: .5rem .8rem;
+  border-bottom: 1px solid #ccc;
+  font-size: .7rem;
+  font-weight: 600;
+  position: relative;
+}
+.brandtitle ul li:before {
+  position: absolute;
+  right: 10%;
+  color: #ccc;
+}
+.brandtitle ul li a {
   display: inline-block;
+  color: #333333;
+  width: 100%;
   height: 100%;
-  background: red;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar b {
-  font-weight: 400;
-}
-.baicaijia .bcj-content ul li .bcj-info .last a {
-  font-size: .6rem;
-  height: 1.4rem;
-  line-height: 1.4rem;
-  text-align: center;
-}
-.baicaijia .bcj-content ul li .bcj-info .last a:first-child {
-  display: inline-block;
-  width: 5.4rem;
-  border: 1px dashed #fb3461;
-}
-.baicaijia .bcj-content ul li .bcj-info .last a:last-child {
-  float: right;
-  width: 3rem;
-  background: #ff5e5d;
-  color: #fff;
-  border-radius: 7px;
 }
