--- a/css/couponproduct.css
+++ b/css/couponproduct.css
@@ -445,110 +445,82 @@ body {
 .container .m-top {
   background: #f4483e;
 }
-.baicaijia {
-  overflow: hidden;
-  position: relative;
+.container .m-footer ul {
+  padding-top: 0;
 }
-.baicaijia .bcj-top {
-  height: 2rem;
-  background: #fff;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-}
-.baicaijia .bcj-top ul {
-  width: 1000%;
-  margin-right: 2rem;
-  height: 100%;
-}
-.baicaijia .bcj-top ul li {
-  height: 100%;
-  line-height: 2rem;
-  margin: 0 .6rem;
-  float: left;
-  font-size: .6rem;
-  box-sizing: border-box;
-}
-.baicaijia .bcj-top ul li.now {
-  color: red;
-  border-bottom: 3px solid red;
-}
-.baicaijia .bcj-top .right {
-  width: 2rem;
-  height: 2rem;
-  background: #f6f6f6;
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 1.2rem;
-}
-.baicaijia .bcj-top .right:before {
-  position: relative;
-  top: .4rem;
-  left: .4rem;
-  color: #ccc;
-}
-.baicaijia .bcj-content ul li {
-  padding: .5rem .3rem;
-  margin-top: .2rem;
+.couponproduct {
   background: #fff;
 }
-.baicaijia .bcj-content ul li img {
-  width: 6.4rem;
-  height: 6.4rem;
-  float: left;
-}
-.baicaijia .bcj-content ul li .bcj-info {
-  margin-left: 7rem;
-  font-size: .7rem;
-}
-.baicaijia .bcj-content ul li .bcj-info .price {
-  color: red;
-  display: inline-block;
-  padding: .3rem 0;
-}
-.baicaijia .bcj-content ul li .bcj-info .price em {
-  font-size: .4rem;
-}
-.baicaijia .bcj-content ul li .bcj-info .price del {
-  font-size: .4rem;
-  color: #ccc;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar {
-  color: #fb3461;
-  height: 1.5rem;
-  padding: .3rem 0;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar i {
-  display: inline-block;
-  width: 4.3rem;
-  height: .8rem;
-  background: #ffb7b7;
-  border-radius: 15px;
-  overflow: hidden;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar i em {
-  display: inline-block;
-  height: 100%;
-  background: red;
-}
-.baicaijia .bcj-content ul li .bcj-info .bar b {
-  font-weight: 400;
-}
-.baicaijia .bcj-content ul li .bcj-info .last a {
-  font-size: .6rem;
-  height: 1.4rem;
-  line-height: 1.4rem;
+.couponproduct .title-info {
   text-align: center;
+  color: #b8a29c;
+  padding: .5rem 0;
 }
-.baicaijia .bcj-content ul li .bcj-info .last a:first-child {
-  display: inline-block;
-  width: 5.4rem;
-  border: 1px dashed #fb3461;
+.couponproduct ul {
+  padding-bottom: 1rem;
 }
-.baicaijia .bcj-content ul li .bcj-info .last a:last-child {
-  float: right;
-  width: 3rem;
-  background: #ff5e5d;
+.couponproduct ul li {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom: 1px solid #f1f1f1;
+  padding: .5rem;
+  overflow: hidden;
+}
+.couponproduct ul li img {
+  float: left;
+  width: 5rem;
+  height: 4rem;
+}
+.couponproduct ul li .content-info {
+  overflow: hidden;
+  padding-left: .3rem;
+}
+.couponproduct ul li .content-info .title {
+  font-size: .7rem;
+  margin-bottom: .4rem;
+  line-height: .9rem;
+}
+.couponproduct ul li .content-info .price {
+  font-size: .6rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
+.couponproduct ul li .content-info .time {
+  font-size: .5rem;
+  color: #ef7240;
+}
+.couponproduct ul li:before {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  font-size: 1.3rem;
+  transform: translateY(-50%);
+  color: #ccc;
+  font-weight: 300;
+}
+.couponproduct .see-info {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+}
+.couponproduct .see-info img {
+  width: 9rem;
+  height: 9rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 8rem;
+}
+.couponproduct .see-info span {
+  position: absolute;
+  top: 4rem;
+  right: 1.5rem;
+  font-size: 1.4rem;
   color: #fff;
-  border-radius: 7px;
+  padding: 1rem;
 }
