--- a/css/brand.less
+++ b/css/brand.less
@@ -47,14 +47,14 @@
         position: relative;
         width: 100%;
         box-sizing: border-box;
-        &:before{
+        &:before {
           position: absolute;
           right: 5%;
           top: 50%;
           transform: translateY(-50%);
           color: #969696;
         }
-        span{
+        span {
           float: left;
           width: 1rem;
           height: 1rem;
@@ -66,7 +66,7 @@
         .wb-right {
           overflow: hidden;
           padding-left: .5rem;
-          .num{
+          .num {
             font-size: .6rem;
             color: #969696;
             margin-top: .3rem;
@@ -76,7 +76,7 @@
     }
 
   }
-  .salebrand{
+  .salebrand {
     ul {
       li {
         height: 6rem;
@@ -111,39 +111,62 @@
       }
     }
   }
-  .commentbrand{
-    ul{
-      li{
+  .commentbrand {
+    ul {
+      li {
         padding: .5rem;
         border-bottom: 1px solid #ccc;
-        .bt-top{
-          img{
+        .bt-top {
+          img {
             width: 4.8rem;
             height: 4.8rem;
             float: left;
             margin-bottom: .4rem;
           }
-          .right{
+          .right {
             overflow: hidden;
             padding-left: 1rem;
             box-sizing: border-box;
             font-size: .6rem;
           }
         }
-        .bt-comment{
+        .bt-comment {
           padding: .5rem;
           border: 1px solid #ccc;
           background: #f8f8f8;
           font-size: .6rem;
-          p{
+          position: relative;
+          p {
             margin-bottom: .5rem;
             font-size: .5rem;
-            .left{
+            .left {
               color: #53712f;
             }
-            .right{
+            .right {
               color: #969696;
             }
+          }
+          &:before {
+            content: '';
+            display: block;
+            width: 0;
+            height: 0;
+            border: 11px solid transparent;
+            border-bottom: 10px solid #ccc;
+            position: absolute;
+            top: -22px;
+            left: 60px;
+          }
+          &:after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 0;
+            border: 10px solid transparent;
+            border-bottom: 10px solid #f8f8f8;
+            position: absolute;
+            top: -20px;
+            left: 61px;
           }
         }
       }
