除延迟加载以外的功能实现

--- a/css/baicaijia.css
+++ b/css/baicaijia.css
@@ -445,6 +445,21 @@ body {
 .container .m-top {
   background: #f4483e;
 }
+/*返回顶部，固定屏幕右下角*/
+.scrolltop {
+  position: fixed;
+  width: 1.5rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+  color: #f1f1f1;
+  font-size: 1rem;
+  right: 10px;
+  bottom: 20px;
+  border: 1px solid #ccc;
+}
 .baicaijia {
   overflow: hidden;
   position: relative;
