--- a/css/index.less
+++ b/css/index.less
@@ -82,14 +82,18 @@
     .m-sale-footer {
       padding-top: .625rem;
       background: #fff;
-      button {
+      a {
         display: block;
         width: 17.675rem;
         height: 1.525rem;
+        line-height: 1.525rem;
+        font-size: .6rem;
+       color: #333333;
         background: #f6f6f6;
         border-radius: 3px;
         border: 1px solid #ccc;
         margin: 0 auto;
+        text-align: center;
       }
     }
   }
